added tenant params to route paths
